--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;    
+}
+
 a {
   text-decoration: none;
 }
@@ -44,14 +49,12 @@ main {
 
 section ul {
   display: flex;  
-  justify-content: space-between; 
-  width: 15%; 
-  margin-top: 12px;
-  padding-left: 5px;     
+  gap: 20px;
+  margin-top: 12px;    
 }
 
 .pix {
-  height: 20px;    
+  height: 10px;    
 }
 
 section {
@@ -61,5 +64,13 @@ section {
 header a {
   margin-top: 58px;
   margin-left: 24px;
-  font-family: "poppins";    
-}  
+  font-family: "poppins";
+  font-weight: bold;
+  font-size: 18px;    
+}
+
+.fas {
+  margin-top: 58px;
+  margin-right: 24px;
+  color: blue;    
+}
