--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ ul {
 header {
   position: fixed;
   top: 0;
-  background-color: #ffffff;
+  background-color: #fff;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -25,12 +25,12 @@ header {
   color: #172b4d;
   font-weight: bold;
   font-size: 45px;
-   font-family: "poppins", sans-serif;
-   line-height: 50px;
+  font-family: "poppins", sans-serif;
+  line-height: 50px;
 }
 
 .dev {
-  font-family: "poppins" ,sans-serif;
+  font-family: "poppins", sans-serif;
   margin-top: 12px;
   font-size: 16px;
   line-height: 23px;
@@ -64,7 +64,7 @@ section {
 header a {
   margin-top: 58px;
   margin-left: 24px;
-  font-family: "poppins" , sans-serif;
+  font-family: "poppins", sans-serif;
   font-weight: bold;
   font-size: 18px;
 }
