--- a/style.css
+++ b/style.css
@@ -19,27 +19,35 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .profile {
   color: #172b4d;
   font-weight: bold;
-  font-size: 45px;
+  font-size: 40px;
   font-family: "poppins", sans-serif;
-  line-height: 50px;
+  line-height: 52px;
+  padding-top: 90px;
+
 }
 
 .dev {
   font-family: "poppins", sans-serif;
   margin-top: 12px;
   font-size: 16px;
-  line-height: 23px;
+  line-height: 24px;
   color: #344563;
+  font-weight: 400px;
 }
 
 .connect {
-  margin-top: 15px;
+  font-size: 16px;
   color: #7f8cff;
+  font-weight: 500;
+  line-height: 24px;
+  margin-bottom: 24px;
+  font-family: "poppins", sans-serif;
 }
 
 main {
@@ -53,10 +61,6 @@ section ul {
   margin-top: 12px;
 }
 
-.pix {
-  height: 10px;
-}
-
 section {
   margin: 128px 24px 136px 24px;
 }
@@ -67,10 +71,13 @@ header a {
   font-family: "poppins", sans-serif;
   font-weight: bold;
   font-size: 18px;
+  color: #6070FF;
+  line-height: 20px;
 }
 
 .fas {
   margin-top: 58px;
   margin-right: 24px;
-  color: blue;
+  color: #6070ff;
+  
 }
