--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ header {
 main {
   background-image: url(./images/header-shapes-mobile.png);
   background-repeat: no-repeat;
+  background-color: #fff;
+  border-bottom-left-radius: 30px;
 }
 
 section ul {
@@ -78,4 +80,189 @@ header a {
   margin-top: 58px;
   margin-right: 24px;
   color: #6070ff;
+}
+
+.project {
+  margin: 114px 24px 114px 24px;
+  display: grid;
+  gap: 88px;
+}
+
+.project-card {
+  box-sizing: border-box;
+  border-radius: 16px;
+  padding: 16px;
+  border: 1px solid #dfe1e6;
+}
+
+.pix {
+  height: 220px;
+  width: 100%;
+}
+
+.project-title {
+  font-family: "poppins", sans-serif;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-top: 12px;
+}
+
+.project-description {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
+  margin-top: 20px;
+  font-family: "poppins", sans-serif;
+}
+
+span {
+  color: #7a869a;
+  font-family: "poppins", sans-serif;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.project-content {
+  font-size: 15px;
+  line-height: 24px;
+  font-family: "poppins", sans-serif;
+  color: #344563;
+  margin-top: 20px;
+}
+
+.lang {
+  display: flex;
+  gap: 8px;
+  margin-top: 12px;
+}
+
+.btn {
+  border-radius: 8px;
+  font-weight: 500;
+  background-color: #ebebff;
+  font-size: 12px;
+  color: #6070ff;
+  line-height: 16px;
+  font-family: "poppins", sans-serif;
+  padding: 4px 12px;
+}
+
+.bon {
+  margin-top: 14px;
+  font-weight: 500;
+  line-height: 24px;
+  font-family: "poppins", sans-serif;
+  border-radius: 8px;
+  border: 1px solid #7f8cff;
+  font-size: 17px;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding: 12px;
+  color: #396df2;
+}
+
+.about-myself {
+  color: #172b4d;
+  font-size: 40px;
+  line-height: 52px;
+  font-weight: bold;
+  line-height: 52px;
+  font-family: "poppins", sans-serif;
+  padding-top: 114px;
+}
+
+.myself-content {
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 12px;
+  color: #344563;
+}
+
+.resume {
+  margin-top: 14px;
+  font-weight: 500;
+  line-height: 24px;
+  font-family: "poppins", sans-serif;
+  border-radius: 8px;
+  border: 1px solid #7f8cff;
+  font-size: 17px;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding: 12px;
+  color: #396df2;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.lang-skill {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 48px;
+  margin-bottom: 36px;
+}
+
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.dropdown-menu {
+  padding: 12px 9px 12px 9px;
+  display: flex;
+  background-color: #f7f7f9;
+}
+
+.fame {
+  font-family: "poppins," sans-serif;
+  font-weight: 500;
+  color: #000;
+}
+
+.frame {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 23px;
+  line-height: 24px;
+  font-size: 20px;
+  padding-top: 23px;
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.fa-chevron {
+  padding-right: 30px;
+  color: #acb7c3;
+}
+
+.eng {
+  font-family: "poppins", sans-serif;
+  font-weight: 500;
+  color: #000;
+}
+
+.java {
+  padding-left: 16px;
+  margin-top: 12px;
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+body {
+  background-color: #f7f7f9;
+  position: relative;
 }
