--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ header a {
   border-radius: 16px;
   padding: 16px;
   border: 1px solid #dfe1e6;
+  display: flex;
+  flex-direction: column;
 }
 
 .pix {
@@ -264,4 +266,9 @@ span {
 body {
   background-color: #f7f7f9;
   position: relative;
+}
+
+.bon:hover {
+  color: #fff;
+  background-color: #6070ff;
 }
