--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header a {
 .fas {
   /* margin-top: 58px; */
   margin-right: 24px;
-  color: #acb7c3
+  color: #acb7c3;
 }
 
 .bar {
@@ -260,7 +260,6 @@ span {
 }
 
 body {
-  
   position: relative;
 }
 
@@ -274,7 +273,8 @@ body {
   background-color: #2230d2;
 }
 
-footer, form {
+footer, 
+form {
   display: flex;
   flex-direction: column;
 }
@@ -295,7 +295,7 @@ footer h1 {
   margin-bottom: 12px;
   color: white;
   text-align: center;
-} 
+}
 
 footer p {
   font-size: 20px;
@@ -310,7 +310,8 @@ footer button {
   width: 140px;
 }
 
-input, textarea {
+input, 
+textarea {
   border-radius: 8px;
   padding: 15px 38px 15px 16px;
   font-size: 17px;
