--- a/style.css
+++ b/style.css
@@ -377,6 +377,21 @@ textarea {
   .logo {
     margin-top: 25px;
     padding-left: 100px;
+
+    animation-name: logo-rotate;
+    animation-duration: 2.5s;
+  }
+
+  @keyframes logo-rotate {
+    from {
+      opacity: 0;
+      transform: perspective(100px) rotateX(0deg);
+    }
+
+    to {
+      opacity: 1;
+      transform: perspective(100px) rotateX(360deg);
+    }
   }
 
   .nav-list {
