--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ section {
 }
 
 .logo {
-  margin-top: 58px;
   margin-left: 24px;
   font-family: "poppins", sans-serif;
   font-weight: bold;
@@ -95,6 +94,20 @@ section {
   margin-right: 24px;
   background-color: white;
   border: 0;
+  display: none;
+}
+
+header .nav-list {
+  display: flex;
+  
+}
+
+header .nav-list .close-menu {
+  display: none;
+}
+
+header .nav-list li{
+  margin-right: 32px;
 }
 
 .hamburger i {
@@ -518,8 +531,46 @@ textarea {
 }
 
 @media screen and (max-width: 800px) {
-  .nav-list {
+  header .nav-list{
     display: none;
+  }
+
+  .hamburger{
+    display: block;
+    margin-top: 0;
+  }
+
+  header .mobileMenu {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #6070FF;
+    padding: 33px 38px 0px 28px;
+    flex-direction: column;
+  }
+
+  header .mobileMenu .close-menu{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    margin-bottom: 32px;
+  }
+
+  .mobileMenu li {
+    margin-right: 0;
+  }
+
+  .mobileMenu li a {
+    color: #fff;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 44px;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 40px;
   }
 
   .snap {
