--- a/style.css
+++ b/style.css
@@ -1,24 +1,78 @@
+/*
+    ==============================================
+                ****** RESET *****
+    ==============================================
+*/
 * {
   margin: 0;
   padding: 0;
-}
-
-html {
-  font-family: "Poppins", sans-serif;
-  background-color: white;
-}
-
-a {
-  text-decoration: none;
+  box-sizing: border-box;
 }
 
 ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+/*
+      ==============================================
+                  ****** GLOBAL ******
+      ==============================================
+*/
+
+/* ------- Main ------- */
+body {
+  background-color: #f7f7f9;
+  position: relative;
+}
+
+.menu-style {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-color: #1b31f0a2;
+}
+
+.menu-style i {
+  color: #fff;
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 62px;
+  padding-right: 38px;
+}
+
+.menu-style .menu-list {
+  margin-top: 40px;
+  padding-left: 28px;
+}
+
+.menu-style a {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 64px;
+}
+
+main {
+  height: 100vh;
+  background-image: url("../images/header-shapes\ mobile.png");
+  background-repeat: no-repeat;
+  background-color: #fff;
+  border-bottom-left-radius: 80px;
+}
+
 header {
   position: fixed;
-  background-color: white;
+  background-color: #fff;
   top: 0;
   width: 100%;
   padding: 1rem 0;
@@ -27,556 +81,632 @@ header {
   justify-content: space-between;
 }
 
-.profile {
-  color: #172b4d;
-  font-weight: bold;
-  font-size: 40px;
-  font-family: "poppins", sans-serif;
-  line-height: 52px;
-  padding-top: 90px;
-}
-
-.dev {
-  font-family: "poppins", sans-serif;
-  margin-top: 12px;
-  font-size: 16px;
-  line-height: 24px;
-  color: #344563;
-  font-weight: 400;
-}
-
-.connect {
-  font-size: 16px;
-  color: #7f8cff;
-  font-weight: bold;
-  line-height: 24px;
-  margin-bottom: 24px;
-  font-family: "poppins", sans-serif;
-}
-
-main {
-  background-image: url(./images/header-shapes-mobile.png);
-  background-repeat: no-repeat;
-  background-color: #fff;
-  border-bottom-left-radius: 150px;
-}
-
-section ul {
-  display: flex;
-  gap: 20px;
-  margin-top: 12px;
-}
-
-section {
-  margin: 128px 10% 136px 10%;
-}
-
-.top {
-  padding-bottom: 138px;
-}
-
-.logo {
+header .my-logo {
   margin-left: 24px;
-  font-family: "poppins", sans-serif;
+  color: #6070ff;
+  font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: 18px;
-  color: #6070ff;
   line-height: 20px;
 }
 
-.fas {
-  margin-right: 24px;
-  color: #acb7c3;
-}
-
-.hamburger {
-  margin-top: 58px;
-  margin-right: 24px;
-  background-color: white;
-  border: 0;
-  display: none;
-}
-
-header .nav-list {
+section ul {
+  margin-top: 12px;
   display: flex;
+  gap: 20px;
 }
 
-header .nav-list .close-menu {
+header nav ul {
   display: none;
 }
 
-header .nav-list li {
-  margin-right: 32px;
-}
-
-.hamburger i {
+.fa-bars {
+  margin-right: 24px;
   color: #6070ff;
 }
 
-.project {
-  /* margin: 114px 24px 114px 24px; */
+/* ------- Section ------- */
+.section-top {
+  margin: 0 24px 136px 24px;
+  padding-top: 128px;
+}
+
+.section-title {
+  color: #172b4d;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  word-wrap: break-word;
+}
+
+section p {
+  margin-top: 12px;
+  color: #344563;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+section .main-text {
+  color: #7f8cff;
+  margin-top: 12px;
+}
+
+/* ------- Section - Cards Project ------- */
+.cards-project {
+  padding-top: 114px;
+}
+
+.cards-project-list {
+  width: 88%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 114px;
   display: grid;
   gap: 88px;
 }
 
-.project-card {
+.card {
+  background-color: #fff;
+  border: 1px solid #dfe1e6;
   box-sizing: border-box;
   border-radius: 16px;
   padding: 16px;
-  border: 1px solid #dfe1e6;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  background-color: #fff;
 }
 
-.pix {
-  height: 220px;
+.card img:not(:last-child) {
   width: 100%;
-  display: unset;
+  margin-top: 12px;
+  height: auto;
 }
 
-.project-title {
-  font-family: "poppins", sans-serif;
+.card .card-title {
+  color: #172b4d;
+  font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: 32px;
   line-height: 44px;
-  color: #172b4d;
   margin-top: 12px;
 }
 
-.project-description {
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 16px;
+.card .card-description {
   color: #344563;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
   margin-top: 20px;
-  font-family: "poppins", sans-serif;
 }
 
-span {
+.card span {
   color: #7a869a;
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
 }
 
-.project-content {
+.card .card-text-content {
+  color: #344563;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   line-height: 24px;
-  font-family: "poppins", sans-serif;
-  color: #344563;
   margin-top: 20px;
 }
 
-.lang {
+.card .butonns-languages {
   display: flex;
   gap: 8px;
-  margin-top: 12px;
 }
 
-.btn {
-  border-radius: 8px;
-  font-weight: 500;
-  background-color: #ebebff;
-  font-size: 12px;
+.ruby-on-rails {
+  display: none;
+}
+
+.btn-lg {
   color: #6070ff;
+  font-weight: 500;
+  font-size: 12px;
   line-height: 16px;
-  font-family: "poppins", sans-serif;
+  letter-spacing: 0.03em;
+  background-color: #ebebff;
+  font-family: "Poppins", sans-serif;
+  border-radius: 8px;
   padding: 4px 12px;
 }
 
-.bon {
-  margin-top: 14px;
-  font-weight: 500;
-  line-height: 24px;
-  font-family: "poppins", sans-serif;
-  border-radius: 8px;
-  border: 1px solid #7f8cff;
-  font-size: 17px;
-  background-color: #fff;
-  box-sizing: border-box;
-  padding: 12px;
+.btn-project {
   color: #396df2;
+  background-color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  white-space: nowrap;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  border: 1px solid #7f8cff;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  padding: 12px;
+  margin-top: 14px;
+  outline: none;
 }
 
-.myself {
+.btn-project:hover {
+  color: #fff;
+  background-color: #6070ff;
+  border: 1px solid #7f8cff;
+}
+
+.btn-project:active {
+  color: #fff;
+  background-color: #2230d2;
+}
+
+/* ------- MOBILE POPUP WINDOW - START ------- */
+.popup-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(116, 114, 114, 0.425);
+}
+
+.popup-mobile-card {
+  position: fixed;
+  background-color: rgb(255, 255, 255);
+  left: 0;
+  right: 0;
+  top: 20px;
+  bottom: 20px;
+  height: 680px;
+  display: none;
+  width: 88%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 114px;
+}
+
+.popup-mobile-card .card-text-content {
+  margin-top: 12px;
+}
+
+.popup-mobile-card .card-title {
+  margin-top: 0;
+}
+
+.popup-mobile-card .popupCLose {
+  color: #67798e;
+}
+
+.popup-mobile-card .card-content {
+  padding-bottom: 20px;
+}
+
+.popup-mobile-card .butonns-languages {
+  padding-top: 12px;
+}
+
+.popup-mobile-card .popupimage {
+  margin-top: 20px;
+}
+
+.popup-mobile-card .popup-button-div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.popup-mobile-card .popup-button-div .btn-project {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  font-size: 15px;
+}
+
+.popup-mobile-card .popup-button-div .btn-project a {
+  color: #396df2;
+  font-weight: 500;
+}
+
+.popup-card-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popup-card-top i {
+  color: #67798e;
+}
+
+/* ------- MOBILE POPUP WINDOW -END ------- */
+
+/* ------- Section About Myself ------- */
+.about-myself {
   background-color: #fff;
   border-top-right-radius: 80px;
-  padding-bottom: 150px;
-  margin-right: 15px;
-  margin-left: 15px;
 }
 
-.about-myself {
-  color: #172b4d;
-  font-size: 40px;
-  line-height: 52px;
-  font-weight: bold;
-  font-family: "poppins", sans-serif;
+.about-myself-content {
+  margin: 0 24px 0 24px;
+}
+
+.about-myself-content .section-title {
   padding-top: 114px;
 }
 
-.myself-content {
-  font-family: "poppins", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  margin-top: 12px;
-  color: #344563;
+.about-myself-content #skills-margin {
+  margin-top: 48px;
 }
 
-.container {
+.skills-container {
   display: flex;
   flex-direction: column;
-  gap: 12px;
   margin-left: 12px;
   margin-right: 12px;
 }
 
-.lang-skill {
+.lg-dropdown p {
+  padding-left: 16px;
+}
+
+.about-myself .skills p {
+  margin-top: 0;
+}
+
+.skills {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   font-size: 20px;
   line-height: 24px;
-  margin-top: 48px;
-  margin-bottom: 36px;
 }
 
-.dropdown {
+.about-myself-content .skills p {
+  font-family: "Poppins", sans-serif;
+  color: #000;
+  font-weight: 500;
+}
+
+.lg-dropdown-description {
+  display: flex;
+  background-color: #f7f7f9;
+  padding: 12px 9px 12px 9px;
+}
+
+.lg-dropdown {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
 
-.dropdown-menu {
-  padding: 12px 9px 12px 9px;
-  display: flex;
-  background-color: #f7f7f9;
-}
-
-.fame {
-  font-family: "poppins", sans-serif;
-  font-weight: 500;
-  color: #000;
-}
-
-.frame {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 23px;
-  line-height: 24px;
-  font-size: 20px;
-  padding-top: 23px;
+.skills-border {
   border-bottom: 1px solid #dfe1e6;
+  padding-top: 23px;
+  padding-bottom: 23px;
 }
 
-.fa-chevron {
+.fa-chevron-down,
+.fa-chevron-right {
   padding-right: 30px;
   color: #acb7c3;
 }
 
-.eng {
-  font-family: "poppins", sans-serif;
-  font-weight: 500;
-  color: #000;
+/* ------- Section Contact ME ------- */
+.contact-section {
+  padding-top: 113.85px;
+  background-color: #fff;
 }
 
-.java {
-  margin-top: 12px;
-  font-family: "poppins", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-body {
-  background-color: #f7f7f9;
-  position: relative;
-}
-
-.bon:hover {
-  color: #fff;
-  background-color: #6070ff;
-}
-
-.bon:active {
-  color: #fff;
-  background-color: #2230d2;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  display: flex;
-  flex-direction: column;
-  padding: 103px 24px 32px 24px;
-  background-color: #6070ff;
-  background-image: url(./images/contact-form.png);
+.contact {
+  background-image: url("../images/contact-form-bg-mobile-size.png");
   background-repeat: no-repeat;
-  background-position: top right;
+  background-size: contain;
+  background-position: 147px 21px;
+  background-color: #6070ff;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 45px;
   border-top-left-radius: 80px;
 }
 
-footer h2 {
+.contact h2 {
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  font-weight: bold;
   font-size: 40px;
   line-height: 52px;
-  font-weight: 700;
-  margin-bottom: 12px;
-  color: white;
   text-align: center;
+  padding-top: 103px;
 }
 
-footer p {
+.contact-section-text-content {
+  font-family: "Poppins", sans-serif;
+  color: #ebebff;
   font-size: 20px;
   line-height: 28px;
-  font-weight: 400;
-  margin-bottom: 48px;
-  color: #ebebff;
   text-align: center;
 }
 
-footer button {
-  width: 140px;
+.contact form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 58px;
 }
 
-input {
-  border-radius: 8px;
-  padding: 15px 38px 15px 16px;
-  font-size: 17px;
-  line-height: 20px;
-  color: #172b4d;
-  border: 1px solid #cfd8dc;
-  font-family: "Poppins", sans-serif;
-}
-
+.contact input,
 textarea {
-  border-radius: 8px;
   padding: 15px 38px 15px 16px;
-  font-size: 17px;
-  line-height: 20px;
-  color: #172b4d;
   border: 1px solid #cfd8dc;
-  font-family: "Poppins", sans-serif;
+  border-radius: 8px;
+  resize: none;
 }
 
-#user-email {
-  margin-top: 20px;
-  margin-bottom: 18px;
+#message {
+  height: 170px;
 }
 
-@media screen and (min-width: 992px) {
-  .fa-bars::before {
+.btn-contact {
+  width: 48%;
+}
+
+.dot::before {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border: 1px solid #c1c7d0;
+  background-color: #898a8d;
+  border-radius: 50%;
+  font-weight: bold;
+  margin: 0 7px;
+}
+
+.dot::after {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border: 1px solid #c1c7d0;
+  background-color: #898a8d;
+  border-radius: 50%;
+  font-weight: bold;
+  margin: 0 7px;
+}
+
+/*
+      ==============================================
+       *** MEDIA QUERY - Desktop Version- 1024px ***
+      ==============================================
+*/
+
+@media only screen and (min-width: 1024px) {
+  /* ------- Main ------- */
+  main {
+    height: 90vh;
+    background-image: none;
+    border-bottom-left-radius: 150px;
+    padding: 100px 24px 0 0;
+  }
+
+  header nav {
+    display: flex;
+  }
+
+  header .my-logo {
+    margin-left: 154px;
+  }
+
+  header nav .fa-bars {
     display: none;
   }
 
-  .nav-color {
-    padding: 10px 12px;
+  header nav ul {
+    display: flex;
+    gap: 52px;
+    padding-right: 154px;
+  }
+
+  header nav ul li a {
+    color: #344563;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 15px;
     line-height: 20px;
-    margin-top: 25px;
   }
 
-  .nav-link {
-    color: #344563;
-    transition-property: font-size;
-    transition-duration: 2.5s;
-  }
-
-  .nav-link:hover {
-    font-size: 18px;
-  }
-
-  .logo {
-    margin-top: 25px;
-    padding-left: 100px;
-    animation-name: logo-rotate;
-    animation-duration: 2.5s;
-  }
-
-  @keyframes logo-rotate {
-    from {
-      opacity: 0;
-      transform: perspective(100px) rotateX(0deg);
-    }
-
-    to {
-      opacity: 1;
-      transform: perspective(100px) rotateX(360deg);
-    }
-  }
-
-  .nav-list {
-    display: flex;
-    padding-right: 100px;
-  }
-
-  main {
-    background-image: url(./images/header-bg-desktop.png);
-    background-size: contain;
+  .section-top {
+    margin: 0;
+    background-image: url("../images/header-shapes-desktop.png");
     background-repeat: no-repeat;
-    background-position: top right;
-    padding: 0 250px 0 250px;
+    background-size: cover;
+    background-size: 90vw 74vh;
+    padding: 0 260px 257px 260px;
   }
 
-  .profile {
+  .section-top h1 {
     font-size: 48px;
-    width: 400px;
     line-height: 60px;
-    padding-top: 200px;
-    color: #091e42;
   }
 
-  .dev {
+  .section-top p {
     font-size: 20px;
     line-height: 28px;
-    color: #344563;
-    width: 100%;
   }
 
-  .pix {
-    display: none;
+  /* ------- Section - Cards Project ------- */
+  .card {
+    padding: 2rem;
+    margin: 0 auto;
   }
 
-  .snap {
-    display: unset;
-  }
-
-  .bon {
-    margin-top: 50px;
-  }
-
-  .card-img {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    padding: 20px;
-  }
-
-  .card-content {
-    display: flex;
-    flex-direction: column;
-    width: 45%;
-    padding: 20px;
-  }
-
-  span {
-    margin-left: 12px;
-    font-weight: 400;
-  }
-
-  span img {
-    margin-right: 12px;
-  }
-
-  .flex-order {
-    order: 2;
-  }
-
-  .about-content {
-    display: flex;
-  }
-
-  .about {
-    width: 50%;
-  }
-
-  .project-card {
-    flex-wrap: nowrap;
-    justify-content: space-between;
-  }
-
-  .project-description {
-    font-weight: 600;
-  }
-
-  .myself {
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-
-  .dropdown {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .dropdown-menu {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-right: 10px;
-  }
-
-  footer {
-    background-image: url(./images/contact-bg-desktop.png);
+  .cards-project-list {
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 160px 24px 127px 24px;
   }
 
-  footer p {
-    width: 40%;
+  .card img:not(:last-child) {
+    width: 50%;
+    height: 60%;
   }
 
-  form {
-    text-align: center;
-    width: 400px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  header .nav-list {
-    display: none;
+  .card:nth-child(even) {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 16px;
   }
 
-  .hamburger {
+  .card:nth-child(even) img {
+    padding: 24px 22px 24px 0;
+  }
+
+  .card:nth-child(even) .card-content {
+    padding: 48px 0 0 48px;
+  }
+
+  #popup-content {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .card:nth-child(odd) {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+  }
+
+  .card:nth-child(odd) .card-content {
+    padding: 48px 46px 0 0;
+  }
+
+  .card .card-image0 {
+    content: url("../images/desktopt-image1.png");
+  }
+
+  .card .card-image1 {
+    content: url("../images/desktop-image2.png");
+  }
+
+  .card .card-image2 {
+    content: url("../images/desktopt-image3.png");
+  }
+
+  .card .card-image3 {
+    content: url("../images/desktopt-image4.png");
+  }
+
+  .card .card-content .card-description,
+  .card .card-content .card-description span {
+    font-weight: 400;
+  }
+
+  .card .butonns-languages {
+    margin-top: 24px;
+  }
+
+  .card .ruby-on-rails {
     display: block;
-    margin-top: 0;
   }
 
-  header .mobileMenu {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #6070ff;
-    padding: 33px 38px 0 28px;
-    flex-direction: column;
+  .card .btn-project {
+    cursor: url("../images/hand-cursor-1.png"), auto;
+    margin-top: 50px;
   }
 
-  header .mobileMenu .close-menu {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
-    margin-bottom: 32px;
-  }
-
-  .mobileMenu li {
-    margin-right: 0;
-  }
-
-  .mobileMenu li a {
+  .card .btn-project-pressed {
     color: #fff;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 44px;
-    text-decoration: none;
-    display: block;
-    margin-bottom: 40px;
+    background-color: #2230d2;
   }
 
-  .snap {
-    display: none;
+  /* --------Popup START--------- */
+
+  .popup-mobile-card {
+    margin: 0 auto;
+    padding: 3rem;
+    height: 100%;
   }
 
-  .ruby-on-rail {
-    display: none;
+  #popupimage {
+    width: 100% !important;
+  }
+
+  /* --------Popup START--------- */
+
+  /* ------- Section - About Myself ------- */
+
+  .about-myself-container {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    padding: 114px 182px 0 142px;
+  }
+
+  .about-myself .section-title {
+    padding: 0;
+  }
+
+  .skills .fa-chevron-down,
+  .skills .fa-chevron-right {
+    padding-right: 0;
+  }
+
+  .lg-dropdown {
+    flex-direction: row;
+  }
+
+  .lg-dropdown-description {
+    flex-direction: column;
+    width: 122px;
+    height: 120px;
+    border-radius: 2px;
+  }
+
+  .about-myself .lg-dropdown-description img {
+    width: 48px;
+    height: 48px;
+  }
+
+  .lg-dropdown-description p {
+    padding-left: 5px;
+  }
+
+  .skills-border {
+    padding-top: 0;
+  }
+
+  /* ------- Footer ------- */
+
+  footer .contact form {
+    align-items: center;
+  }
+
+  .contact {
+    background-image: url("../images/footer-desktop.png");
+    background-position: center;
+    border-top-left-radius: 150px;
+    padding: 142px 24px 127px 24px;
+  }
+
+  footer .contact-section-text-content {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .contact input,
+  textarea {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2px;
+  }
+
+  footer form .btn-contact {
+    width: 15%;
   }
 }
